--- a/surprise.html
+++ b/surprise.html
@@ -3,25 +3,25 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>For My Sister 💖</title>
+  <title>jhansii</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body class="surprise-page">
   <div class="container">
-    <h1>💝 Happy Raksha Bandhan, My Lovely Sister 💝</h1>
-    <p>You’ve unlocked your surprise! Watch this edit I made just for you ❤️</p>
+    <h1>💝 Happy Raksha Bandhan 💝</h1>
+    <p> Relax, Dont overract - please!!!</p>
 
-    <!-- Replace the video src with your actual YouTube or Drive embed link -->
+    
     <div class="video-container">
-      <iframe width="560" height="315"
-        src="" alt="an edit"
+      <iframe width="315" height="560"
+        src="VID_20250716233550.mp4"
         frameborder="0"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
         allowfullscreen>
       </iframe>
     </div>
 
-    <p class="footer">Made with 💖 by your – Nikhil</p>
+    <p class="footer">Straight from the heart...by your bro 🙂</p>
   </div>
 </body>
 </html>
